@startuml
title SO DO LOP 3 TANG - DANG NHAP

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHDangNhap #BFE8BA {
    - txtTenDangNhap: TextBox
    - txtMatKhau: TextBox
    - btnDangNhap: Button
    --
    + btnDangNhap_Click()
  }

}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class XacThucNguoiDung #F4E3A2 {
    + DangNhap(tenDangNhap: String, matKhau: String): TaiKhoan
  }

  class TaiKhoan #F4E3A2 {
    - MaTK: String
    - TenDangNhap: String
    - MatKhauHash: String
    - TrangThai: String
    - LanDangNhapCuoi: DateTime
    - MaNV: String
    --
    + DocTheoTenDangNhap(tenDangNhap: String): TaiKhoan
    + DangHoatDong(): Boolean
    + KiemTraMatKhau(matKhau: String): Boolean
    + CapNhatLanDangNhap()
  }

  class NhanVien #F4E3A2 {
    - MaNV: String
    - HoTen: String
    - VaiTro: String
    - MaCN: String
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class TaiKhoanDB #BFDCF0 {
    + DocTheoTenDangNhap(tenDangNhap: String): TaiKhoan
    + CapNhatLanDangNhap(taiKhoan: TaiKhoan)
  }
}

' Giao dien su dung use case.
MHDangNhap o-- XacThucNguoiDung

' Lop dieu phoi tap hop cac lop nghiep vu lien quan.
XacThucNguoiDung o-- TaiKhoan : xac thuc
TaiKhoan "0..*" -- "1" NhanVien : so huu

' Aggregation giua business va data access.
TaiKhoan o-- TaiKhoanDB

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
XacThucNguoiDung -[hidden]down- TaiKhoanDB
NhanVien -[hidden]down- TaiKhoanDB
@enduml
